--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Rafal <fatwildcat@gmail.com>
 Build-Depends: debhelper (>= 9), autotools-dev, libgtk-3-dev
 Standards-Version: 3.9.6
-Homepage: http://netloadgraph.sourceforge.net
+Homepage: http://rafaello7.github.io/netloadgraph/
 
 Package: netloadgraph
 Architecture: any
