Added build for Linux Arch

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,3 +8,9 @@ deb: dist
 	mkdir dpkg-deb
 	cd dpkg-deb && tar xf ../$(distdir).tar.gz
 	cd dpkg-deb/$(distdir) && dpkg-buildpackage -us -uc
+
+arch: dist
+	rm -rf archlinux
+	mkdir archlinux
+	cp PKGBUILD netloadgraph-*.tar.gz archlinux
+	cd archlinux && makepkg
